🥞  - Fix z-indexing on homepage

--- a/src/assets/scss/pages/_about.scss
+++ b/src/assets/scss/pages/_about.scss
@@ -37,7 +37,7 @@
       grid-area: unset;
       grid-column: 3;
       grid-row: 1 / span 2;
-      z-index: -1;
+      z-index: 0;
     }
     &:after {
       content: "";
@@ -62,6 +62,7 @@
     line-height: 0.9em;
     align-self: end;
     margin-top: 0;
+    z-index: 1;
     @include screen(lg) {
       grid-column: 1 / span 3;
       grid-row: 1;
